- improve AD filter